Add strings and some translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -19,5 +19,23 @@
                 "title": "Set up integration"
             }
         }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "title": "Configuration",
+                "data": {
+                    "p1_kw_year_eur": "EUR cost of KW in P1 per year",
+                    "p2_kw_year_eur": "EUR cost of KW in P2 per year",
+                    "p1_kwh_eur": "EUR cost of KWH in P1",
+                    "p2_kwh_eur": "EUR cost of KWH in P2",
+                    "p3_kwh_eur": "EUR cost of KWH in P3",
+                    "meter_month_eur": "Meter cost per month",
+                    "market_kw_year_eur": "Market cost per year",
+                    "electricity_tax": "Electricity tax (e.g., 1.05 = 5%)",
+                    "iva": "IVA tax (e.g., 1.21 = 21%)"
+                }
+            }
+        }
     }
 }
