--- a/translations/es.json
+++ b/translations/es.json
@@ -7,8 +7,7 @@
                 "data": {
                     "username": "Nombre de usuario",
                     "password": "Contraseña",
-                    "cups": "CUPS",
-                    "experimental": "Experimental"
+                    "cups": "CUPS"
                 }
             }
         },
