--- a/translations/es.json
+++ b/translations/es.json
@@ -7,7 +7,8 @@
                 "data": {
                     "username": "Nombre de usuario",
                     "password": "Contraseña",
-                    "cups": "CUPS"
+                    "cups": "CUPS",
+                    "authorized_nif": "NIF autorizado"
                 }
             }
         },
