Fix #106 and general improvements
Update translations to show billing check label

Update default values for pricing rules

Avoid using get_instance to enable old HA instances

--- a/translations/es.json
+++ b/translations/es.json
@@ -23,8 +23,9 @@
     "options": {
         "step": {
             "init": {
-                "title": "Configuration",
+                "title": "Configuración",
                 "data": {
+                    "billing": "Activar facturación",
                     "p1_kw_year_eur": "Coste por kW contratado en P1 (€)",
                     "p2_kw_year_eur": "Coste por kW contratado en P2 (€)",
                     "p1_kwh_eur": "Coste por kWh en P1 (€)",
