--- a/translations/ca.json
+++ b/translations/ca.json
@@ -26,6 +26,7 @@
             "init": {
                 "title": "Configuració",
                 "data": {
+                    "billing": "Activa la facturació",
                     "p1_kw_year_eur": "Potència: Preu kW franja Punta - P1 (€)",
                     "p2_kw_year_eur": "Potència: Preu kW franja Vall - P2 (€)",
                     "p1_kwh_eur": "Energia: Preu per kWh a la franja Punta - P1 (€)",
