--- a/translations/es.json
+++ b/translations/es.json
@@ -26,6 +26,7 @@
                 "title": "Configuración",
                 "data": {
                     "billing": "Activar facturación",
+                    "pvpc": "PVPC",
                     "p1_kw_year_eur": "Coste por kW contratado en P1 (€)",
                     "p2_kw_year_eur": "Coste por kW contratado en P2 (€)",
                     "p1_kwh_eur": "Coste por kWh en P1 (€)",
