--- a/translations/ca.json
+++ b/translations/ca.json
@@ -31,15 +31,18 @@
                 }
             },
             "costs": {
-                "p1_kw_year_eur": "Potència: Preu kW franja Punta - P1 (€)",
-                "p2_kw_year_eur": "Potència: Preu kW franja Vall - P2 (€)",
-                "p1_kwh_eur": "Energia: Preu per kWh a la franja Punta - P1 (€)",
-                "p2_kwh_eur": "Energia: Preu per kWh a la franja Pla - P2 (€)",
-                "p3_kwh_eur": "Energia: Preu per kWh a la franja Vall - P3 (€)",
-                "meter_month_eur": "Cost mensual lloger del comptador (€)",
-                "market_kw_year_eur": "Cost anual per mercat de kW (€)",
-                "electricity_tax": "Impost sobre l'electricitat (ex: 1,05 per a un 5%)",
-                "iva": "IVA (ex: 1,21 per a un 21%)"
+                "title": "Facturació",
+                "data": {
+                    "p1_kw_year_eur": "Potència: Preu kW franja Punta - P1 (€)",
+                    "p2_kw_year_eur": "Potència: Preu kW franja Vall - P2 (€)",
+                    "meter_month_eur": "Cost mensual lloger del comptador (€)",
+                    "market_kw_year_eur": "Cost anual per mercat de kW (€)",
+                    "electricity_tax": "Impost sobre l'electricitat (ex: 1,05 per a un 5%)",
+                    "iva": "IVA (ex: 1,21 per a un 21%)",
+                    "p1_kwh_eur": "Energia: Preu per kWh a la franja Punta - P1 (€)",
+                    "p2_kwh_eur": "Energia: Preu per kWh a la franja Pla - P2 (€)",
+                    "p3_kwh_eur": "Energia: Preu per kWh a la franja Vall - P3 (€)"
+                }
             }
         }
     }
