--- a/translations/en.json
+++ b/translations/en.json
@@ -3,10 +3,12 @@
     "config": {
         "abort": {
             "already_configured": "CUPS is already configured",
-            "unknown": "Unknown error occurred"
+            "unknown": "Unknown error occurred",
+            "invalid_credentials": "Invalid credentials"
         },
         "error": {
-            "already_configured": "This CUPS is already configured"
+            "already_configured": "This CUPS is already configured",
+            "invalid_credentials": "Invalid credentials"
         },
         "step": {
             "user": {
@@ -26,15 +28,21 @@
                 "title": "Configuration",
                 "data": {
                     "billing": "Activate billing",
+                    "pvpc": "PVPC"
+                }
+            },
+            "costs": {
+                "title": "Billing",
+                "data": {
                     "p1_kw_year_eur": "EUR cost of KW in P1 per year",
                     "p2_kw_year_eur": "EUR cost of KW in P2 per year",
-                    "p1_kwh_eur": "EUR cost of KWH in P1",
-                    "p2_kwh_eur": "EUR cost of KWH in P2",
-                    "p3_kwh_eur": "EUR cost of KWH in P3",
                     "meter_month_eur": "Meter cost per month",
                     "market_kw_year_eur": "Market cost per year",
                     "electricity_tax": "Electricity tax (e.g., 1.05 = 5%)",
-                    "iva": "IVA tax (e.g., 1.21 = 21%)"
+                    "iva": "IVA tax (e.g., 1.21 = 21%)",
+                    "p1_kwh_eur": "EUR cost of KWH in P1",
+                    "p2_kwh_eur": "EUR cost of KWH in P2",
+                    "p3_kwh_eur": "EUR cost of KWH in P3"
                 }
             }
         }
