--- a/translations/es.json
+++ b/translations/es.json
@@ -1,6 +1,16 @@
 {
     "title": "Integración edata",
     "config": {
+        "abort": {
+            "unknown": "Error desconocido",
+            "already_configured": "Este CUPS ya está configurado",
+            "invalid_credentials": "Credenciales incorrectas"
+        },
+        "error": {
+            "unknown": "Error desconocido",
+            "already_configured": "Este CUPS ya está configurado",
+            "invalid_credentials": "Credenciales incorrectas"
+        },
         "step": {
             "user": {
                 "title": "Configurar integración",
@@ -11,13 +21,6 @@
                     "authorized_nif": "NIF autorizado"
                 }
             }
-        },
-        "error": {
-            "already_configured": "Este CUPS ya está configurado"
-        },
-        "abort": {
-            "unknown": "Error desconocido",
-            "already_configured": "Este CUPS ya está configurado"
         }
     },
     "options": {
@@ -26,15 +29,21 @@
                 "title": "Configuración",
                 "data": {
                     "billing": "Activar facturación",
+                    "pvpc": "PVPC"
+                }
+            },
+            "costs": {
+                "title": "Facturación",
+                "data": {
                     "p1_kw_year_eur": "Coste por kW contratado en P1 (€)",
                     "p2_kw_year_eur": "Coste por kW contratado en P2 (€)",
-                    "p1_kwh_eur": "Coste por kWh en P1 (€)",
-                    "p2_kwh_eur": "Coste por kWh en P2 (€)",
-                    "p3_kwh_eur": "Coste por kWh en P3 (€)",
                     "meter_month_eur": "Coste mensual por alquiler de contador (€)",
                     "market_kw_year_eur": "Coste anual por mercado de kW (€)",
                     "electricity_tax": "Impuesto de electricidad (e.g., 1.05 para 5%)",
-                    "iva": "IVA (e.g., 1.21 para 21%)"
+                    "iva": "IVA (e.g., 1.21 para 21%)",
+                    "p1_kwh_eur": "Coste por kWh en P1 (€)",
+                    "p2_kwh_eur": "Coste por kWh en P2 (€)",
+                    "p3_kwh_eur": "Coste por kWh en P3 (€)"
                 }
             }
         }
