--- a/translations/gl.json
+++ b/translations/gl.json
@@ -26,15 +26,21 @@
                 "title": "Configuración",
                 "data": {
                     "billing": "Activar facturación",
+                    "pvpc": "PVPC"
+                }
+            },
+            "costs": {
+                "title": "Facturación",
+                "data": {
                     "p1_kw_year_eur": "Custo por kW contratado en P1 (€)",
                     "p2_kw_year_eur": "Custo por kW contratado en P2 (€)",
-                    "p1_kwh_eur": "Custo por kWh en P1 (€)",
-                    "p2_kwh_eur": "Custo por kWh en P2 (€)",
-                    "p3_kwh_eur": "Custo por kWh en P3 (€)",
                     "meter_month_eur": "Custo mensual por alquiler de contador (€)",
                     "market_kw_year_eur": "Custo anual por mercado de kW (€)",
                     "electricity_tax": "Imposto de electricidade (e.g., 1.05 para 5%)",
-                    "iva": "IVE (e.g., 1.21 para 21%)"
+                    "iva": "IVE (e.g., 1.21 para 21%)",
+                    "p1_kwh_eur": "Custo por kWh en P1 (€)",
+                    "p2_kwh_eur": "Custo por kWh en P2 (€)",
+                    "p3_kwh_eur": "Custo por kWh en P3 (€)"
                 }
             }
         }
