--- a/custom_components/edata/translations/es.json
+++ b/custom_components/edata/translations/es.json
@@ -2,28 +2,28 @@
   "title": "Integración edata",
   "entity": {
     "sensor": {
-      "month_kWh": {
+      "month_kwh": {
         "name": "Consumo en el mes"
       },
-      "last_month_kWh": {
+      "last_month_kwh": {
         "name": "Consumo durante último mes"
       },
-      "yesterday_kWh": {
+      "yesterday_kwh": {
         "name": "Consumo ayer"
       },
-      "last_registered_day_kWh": {
+      "last_registered_day_kwh": {
         "name": "Último consumo registrado"
       },
-      "max_power_kW": {
+      "max_power_kw": {
         "name": "Potencia máxima registrada"
       },
-      "month_€": {
+      "month_eur": {
         "name": "Factura del mes"
       },
-      "last_month_€": {
+      "last_month_eur": {
         "name": "Factura del último mes"
       },
-      "cups": {
+      "info": {
         "name": "Información del suministro"
       }
     }
